# HackComingWinter

./: .gitignore  CNAME  README.md  main.py  memory.sql  pyproject.toml
static/css/: index.css  login-register.css  main.css
templates/: base.html  index.html  login-register.html  test.html
